--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
         <title>Document</title>
     </head>
     <body>
-        <h1>Hello ziom</h1>
+        <h1>Hello kox</h1>
     </body>
 </html>
