--- a/exindex.html
+++ b/exindex.html
@@ -8,5 +8,7 @@
     </head>
     <body>
         <h1>Hello GIT</h1>
+        <p> Lorem ipsum dolor sit amet consectetur, adipisicing elit. Impedit distinctio quidem, cupiditate sapiente, minus explicabo, non in veniam nemo alias magnam! Asperiores inventore amet quas distinctio est possimus eligendi et?</p>
+
     </body>
 </html>
