--- a/exindex.html
+++ b/exindex.html
@@ -8,6 +8,6 @@
     </head>
     <body>
         <h1>Hello GIT</h1>
-        <p>My sample text</p>
+        <p>Development text</p>
     </body>
 </html>
